# flask-smorest-sqla

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
docs/: api_reference.rst  conf.py  flask_smorest_sqla.rst  index.rst  modules.rst  quickstart.rst  tests.rst
flask_smorest_sqla/: __init__.py  crud_blueprint.py  utils.py
tests/: conftest.py  test_crud_blueprint.py
