[tool.poetry]
name = "flask-smorest-sqla"
version = "0.1.0"
description = "Adds SQLAlchemy support to Flask-Smorest"
authors = ["Dave <dave@tenko.ai>"]
license = "MIT"
homepage = "https://github.com/zedrdave/flask-smorest-sqla"
readme = "README.md"
packages = [{include = "flask_smorest_sqla"}]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
