[tool.poetry]
name = "flask-smorest-sqla"
version = "0.1.0"
description = "Adds SQLAlchemy support to a Flask-Smorest REST API"
authors = ["Dave <dave@tenko.ai>"]
license = "MIT"
homepage = "https://github.com/zedrdave/flask-smorest-sqla"
readme = "README.rst"
packages = [{include = "flask_smorest_sqla"}]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.7"
flask-smorest = "^0.40.0"
flask-sqlalchemy = "^3.0.3"
marshmallow-sqlalchemy = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
requests = "^2.28.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max-line-length = 120
#ignore = ["E203"]
